--- a/views/home.ejs
+++ b/views/home.ejs
@@ -62,7 +62,7 @@
 <body>
     <div class="login-container">
         <h2>Email Verification</h2>
-        <form action="/verify-email" method="POST">
+        <form action="/input-email" method="POST">
             <div class="form-group">
                 <label for="Email">Email:</label>
                 <input type="email" id="Email" name="email" required>
