--- a/views/home.ejs
+++ b/views/home.ejs
@@ -242,7 +242,7 @@
 
             try {
                 // 3. Send to API
-                const response = await fetch('/form', {
+                const response = await fetch('/form/submit', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(formData)
